[gd_scene load_steps=6 format=3 uid="uid://cinfgl03ng2kc"]

[ext_resource type="Script" path="res://guimmo.gd" id="1"]
[ext_resource type="PackedScene" path="res://BoardTile.tscn" id="2"]
[ext_resource type="Script" path="res://MapPosition.gd" id="3"]
[ext_resource type="PackedScene" path="res://BackpackItem.tscn" id="4"]
[ext_resource type="Script" path="res://BackpackPosition.gd" id="5"]

[node name="guimmo" type="Node2D"]
script = ExtResource("1")

[node name="Web" type="Node2D" parent="."]

[node name="SetInput" type="HTTPRequest" parent="Web"]

[node name="GetMap" type="HTTPRequest" parent="Web"]

[node name="GetGame" type="HTTPRequest" parent="Web"]

[node name="CreatePlayer" type="HTTPRequest" parent="Web"]

[node name="GetPlayer" type="HTTPRequest" parent="Web"]

[node name="MapPosition" type="Marker2D" parent="."]
script = ExtResource("3")

[node name="NWTile" parent="MapPosition" instance=ExtResource("2")]

[node name="NNTile" parent="MapPosition" instance=ExtResource("2")]

[node name="NETile" parent="MapPosition" instance=ExtResource("2")]

[node name="WWTile" parent="MapPosition" instance=ExtResource("2")]

[node name="CETile" parent="MapPosition" instance=ExtResource("2")]

[node name="EETile" parent="MapPosition" instance=ExtResource("2")]

[node name="SWTile" parent="MapPosition" instance=ExtResource("2")]

[node name="SSTile" parent="MapPosition" instance=ExtResource("2")]

[node name="SETile" parent="MapPosition" instance=ExtResource("2")]

[node name="BackpackPosition" type="Marker2D" parent="."]
position = Vector2(1103, 366)
script = ExtResource("5")

[node name="BackpackItem0" parent="BackpackPosition" instance=ExtResource("4")]

[node name="BackpackItem1" parent="BackpackPosition" instance=ExtResource("4")]

[node name="BackpackItem2" parent="BackpackPosition" instance=ExtResource("4")]

[node name="BackpackItem3" parent="BackpackPosition" instance=ExtResource("4")]

[node name="Timer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 14.0
